--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tutorial</title>
 </head>
 <body>
-    
+    <header>
+        <h1>WOW, I am self taught!</h1>
+    </header>
 </body>
 </html>
