--- a/index.html
+++ b/index.html
@@ -3,11 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorial</title>
+    <title>Coqui-fy</title>
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>WOW, I am self taught!</h1>
-    </header>
-</body>
+    <!--Banner Section-->
+    
+    <div class="banner">
+        <h1>El Coqui's Landing Banner</h1>
+        <img src="./Images/El Coqui PR.jpg" alt=""class="coqui-img">
+        <p><em><strong>Cause everything's better with El Coqui's face on it.</strong></em></p>
+        <button>Subscribete por qué soy boriqua!</button>
+    </div> 
+    
+        <br>
+        <ul id=list>
+            <li>
+                <div></div><span>Hola, it's El Coqui.</span>
+            </li>
+            <li>
+                <div></div><span>Saludos, it's El Coqui again!</span>
+            </li>
+            <li>
+                <div></div><span>Once again, it's El Coqui!!!</span>
+            </li>
+        </ul>
+
+    <div class="que-pasa">
+        <p>Click to navigate to my favorite website: <a href="http://quepasa.pr/" target="_blank">Qué Pasa!</a></p>
+    </div>
+
+    <!--El Coqui section-->
+
+    <div class="h2">
+        <h2>***El Coqui!!!***</h2> 
+        <p>Social media dedicated to El Coqui...</p>
+        <p>and only El Coqui... cause he's from</p>
+        <p>La Isla del Encanto.</p> 
+        <form action="">
+            <input type="text"/>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+
+    <div id="media">
+            <h2 id=h2>Media</h2>
+            <iframe width="852" height="535" src="https://www.youtube.com/embed/5mHoislgzzQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>   
+
+    <div class="footer">
+        <footer>
+            <p><strong>"Posted by" Samuel Arriaga, Web Developer</strong></p>
+            <p>Contact information:sarriaga62@gmail.com</p>
+        </footer> 
+    </div>
+
+    </body>
 </html>
